--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
   flex-direction: column;
 }
 
-.line-break {
-  height: 18px;
+p {
+  line-height: 25px;
+  margin-bottom: 18px;
 }
 
 .content {
@@ -65,6 +66,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 18px;
 }
 
 #quiz-name h1 {
@@ -82,23 +84,27 @@ header {
   justify-content: center;
   align-items: center;
 }
+
 .title {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
   margin: 18px 0 18px 0;
 }
+
 .box {
   background-color: #f1f1f1;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 18px 0 36px 0;
+  margin: 36px 0 36px 0;
+  border: 1px solid #dcdcdc;
 }
+
 .box p {
-  margin-top: 18px;
   margin-bottom: 18px;
 }
+
 .box #start {
   margin-top: 36px;
   font-size: 30px;
@@ -112,6 +118,7 @@ button {
   border: none;
   padding: 18px 18px;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .blue {
@@ -138,7 +145,7 @@ button {
 
 .questions {
   font-weight: bold;
-  margin: 18px 0 18px 0;
+  margin-bottom: 18px;
 }
 
 label {
@@ -148,6 +155,7 @@ label {
   background-color: #f1f1f1;
   padding: 20px 0px 20px 60px;
   border-bottom: 1px solid white;
+  cursor: pointer;
 }
 
 label:hover {
@@ -166,6 +174,7 @@ input {
   margin-right: 20px;
   margin-left: 20px;
   position: absolute;
+  cursor: pointer;
 }
 
 .checked {
@@ -187,6 +196,13 @@ input {
   padding: 5px 5px 5px 5px;
 }
 
-.score{
+.score {
   font-size: 24px;
+}
+
+.result_title {
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
 }
