--- a/style.css
+++ b/style.css
@@ -161,8 +161,9 @@ label {
   display: flex;
   align-items: center;
   background-color: #f1f1f1;
-  padding: 20px 0px 20px 60px;
+  padding: 15px 0px 15px 45px;
   border-bottom: 1px solid white;
+  font-size: 18px;
   cursor: pointer;
 }
 
@@ -179,8 +180,8 @@ span {
 }
 
 input {
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
   position: absolute;
   cursor: pointer;
 }
@@ -203,7 +204,9 @@ input {
   background-color: rgba(0, 0, 0, 0.2);
   padding: 5px 5px 5px 5px;
 }
-
+.answer_box {
+  margin-bottom: 30px;
+}
 .score {
   font-size: 24px;
 }
@@ -213,4 +216,16 @@ input {
   font-weight: bold;
   margin-top: 30px !important;
   margin-bottom: 30px !important;
+}
+
+@media only screen and (max-width: 700px) {
+  .content {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #mern{
+    display: none;
+  }
 }
